--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ la fuerza y el trabajo en equipo mediante actividades recreativas y deportivas.
 </ul>
 <img src="Imagenes/educacion.png" width="260px"> <img src="Imagenes/educacion2.png" width="260px"> <img src="Imagenes/educacion3.png" width="260px">
 <table align="center">
-	<caption>Tabla 1: Horas semanales de Biología por nivel</caption>
+	<caption>Tabla 1: Horas semanales de Educación Física por nivel</caption>
 <tr><th>Año</th><th>Horas semanales</th></tr>
 <tr><td>7º</td><td>2-3(Recreativo)</td></tr>
 <tr><td>8º</td><td>2-3(Recreativo)</td></tr>
@@ -70,3 +70,4 @@ la fuerza y el trabajo en equipo mediante actividades recreativas y deportivas.
 
 </body>
 </html>
+
